tests/unit-fail-compilation/j502a.c.ref
j502a.c:3:2: error: if one of a conditional expression's branches has void type, the other must also have void type.

    Constraint violation (CV-TTE4):
        see C11 section 6.5.15:3 http://rvdoc.org/C11/6.5.15
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

Translation failed (kcc_config dumped). To repeat, run this command in directory unit-fail-compilation:
kcc -d -Werror -Wfatal-errors j502a.c
